# flik-rs

./: .gitignore  Cargo.toml  README.md  build.rs
blueant-soap-c/: BaseBinding.nsmap  Makefile  blueant.h  main  main.c  soapC.c  soapClient.c
blueant-soap-c/Linux/: BaseBinding.Login.req.xml  BaseBinding.LoginImpersonate.req.xml  BaseBinding.LoginNoAuth.req.xml  BaseBinding.LoginSAML.req.xml  BaseBinding.createUser.req.xml  BaseBinding.createUser.res.xml  BaseBinding.deleteUser.req.xml  BaseBinding.searchUser.req.xml  BaseBinding.searchUser.res.xml  blueant  blueant.h  soapC.c  soapClient.c  soapH.h  soapStub.h
blueant-soap-cpp/: Makefile  main.cpp
blueant-soap-proxy/: README.md  setup.py
blueant-soap-proxy/server/: server.py
src/: baseServiceBinding.rs  binding.rs  blueant_soap.rs  flik.rs  lib.rs  main.rs  worktimeAccountingServiceBinding.rs
src/gsoap/: BaseBinding.nsmap  baseService.h  bindings.rs  blueant.c  soapC.c  soapClient.c  soapClientLib.c  soapH.h  soapStub.h
src/services/baseService/: BaseBinding.Login.res.xml  BaseBinding.Logout.req.xml  BaseBinding.Logout.res.xml
tests/: integration.rs
