[package]
authors = ["Mario Nebl <hello@mario-nebl.de>"]
name = "flik-rs"
version = "0.1.0"
build = "build.rs"

[dependencies]
clap = "2.29.2"
rpassword = "1.0.0"
libc = "0.2"

[dev-dependencies]
assert_cli = "0.5.4"

[build-dependencies]
gcc = "0.3"

[lib]
name = "flik_lib"
path = "src/lib.rs"

[[bin]]
name = "flik"
path = "src/main.rs"